# salon_be

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  ttt.py
.github/workflows/: push.yaml
apps/asd/: apps.py  models.py
apps/asd/migrations/: 0001_initial.py  0002_person_asd.py
apps/asd/test/: test_asd.py
apps/asd/utils/: asd.py
apps/asd/views/: asd.py
apps/aws_lambda/: factories.py  models.py
football/: settings.py
salon/: settings.py
utils/: view.py
