[tool.poetry]
name = "football"
version = "0.1.0"
description = ""
authors = ["Valentyn Malyi <valentynmalyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
psycopg2-binary = "^2.9"
environs = "^9.5"
flake8 = "^5"
pytest-django = "^4"
boto3 = "^1.26"
factory-boy = "^3.2"
pydantic = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
